fix: trails now moving correctly, disable warnings and hide scrollbar

--- a/main.css
+++ b/main.css
@@ -14,6 +14,25 @@ body {
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
+/*hide scrollbar on mobile*/
+::-webkit-scrollbar {
+  display: none;
+}
+/*hide scrollbar on mobile*/
+#style-1::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.1);
+  background-color: transparent;
+}
+/*hide scrollbar on mobile*/
+#style-1::-webkit-scrollbar {
+  background-color: transparent;
+}
+/*hide scrollbar on mobile*/
+#style-1::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: transparent;
+}
+
 a {
   color: #ff0;
   text-decoration: none;
@@ -270,7 +289,6 @@ canvas {
   background-color: #ffffff;
 }
 
-
 #trails_menu {
   width: 100%;
   overflow: scroll;
@@ -279,6 +297,7 @@ canvas {
   min-width: 0;
   scroll-snap-type: inline mandatory;
 }
+
 #trails_menu img {
   display: inline-block;
   width: 22px;
